--- a/src/main/webapp/resources/css/cover.css
+++ b/src/main/webapp/resources/css/cover.css
@@ -1,7 +1,3 @@
-/*
- * Globals
- */
-
 /* Links */
 a,
 a:focus,
@@ -28,6 +24,7 @@ html,
 body {
   height: 100%;
   background-color: #333;
+  font-family: 'Titillium Web', sans-serif;
 }
 body {
   color: #fff;
@@ -58,20 +55,23 @@ body {
   padding: 30px;
 }
 
-
 /*
  * Header
  */
 .masthead-brand {
   margin-top: 10px;
   margin-bottom: 10px;
+  margin-left: 12px;
 }
-
+.masthead-nav {
+  margin-left: 20px;
+}
 .masthead-nav > li {
   display: inline-block;
 }
-.masthead-nav > li + li {
-  margin-left: 20px;
+.masthead-nav > li {
+  margin-left: 10px;
+  margin-right: 10px;
 }
 .masthead-nav > li > a {
   padding-right: 0;
@@ -152,6 +152,18 @@ body {
   .cover-container {
     width: 100%; /* Must be percentage or pixels for horizontal alignment */
   }
+
+  /* Custom */
+  div[title~="navigation-bar"] {
+      width: 100%;
+  }
+
+  /*
+  div[title~="footer"] {
+      margin-top: 100px;
+
+  }*/
+  /* ------ */
 }
 
 @media (min-width: 992px) {
