--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1,100 +1,25 @@
-@import url(http://fonts.googleapis.com/css?family=Signika:600|Varela+Round);
+@import url("https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css");
 
-.wrapper {
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-    max-height: 100%;
-    height: 100vh;
-
-    font-size: 14px;
-}
-
-.navbar-default {
-    overflow: hidden;
-    position: fixed; /* Set the navbar to fixed position */
-    top: 0; /* Position the navbar at the top of the page */
-    width: 100%; /* Full width */
-}
-
-.inner {
-    margin-top: 50px;
-}
-
-.page-footer {
-    margin-top: auto;
-}
-
-html,
 body {
-    height: 100%;
-    background-color: #333;
-    font: normal 18px/22px "Varela Round", sans-serif;
-}
-body {
-    color: #fff;
-    text-shadow: 0 1px 3px rgba(0,0,0,.5);
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  min-height: 100%;
 }
 
-h1, h2 {
-    font-family: "Signika", sans-serif;
-    font-weight: 600;
-    text-align: center;
+.root {
 }
 
-h1 {
-    font-size: 36px;
-    line-height: 46px;
-    color: #e0e0e0;
+.layout {
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
-h2 {
-    font-size: 24px;
-    line-height: 33px;
-    margin-bottom: -20px;
+.workspace {
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
-p {
-    margin: 20px 0;
+.padding-left-35 {
+    padding-left: 35px;
 }
-
-a:link, a:visited, a:hover, a:active {
-    color: #0C555C;
-    text-decoration: none;
-}
-
-.modal-header {
-    padding:9px 15px 9px 15px;
-    border-bottom:1px solid #eee;
-    background-color: rgba(40, 96, 144, 0.9);
-    -webkit-border-top-left-radius: 5px;
-    -webkit-border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    text-align: center;
-}
-
-.modal-body {
-    text-align: center;
-}
-
-.modal-body > .tab-content {
-    color: #444;
-    text-shadow: 0 0 1px  #fff;
-}
-
-.modal-body > .tab-content > .tab-pane {
-    text-align: left;
-}
-
-@media (max-width: 768px) {
-    .topProducts {
-        visibility: hidden;
-        height: 0;
-    }
-}
-
-.well, .modal-body {
-    color: #333;
-}
-
